--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   </head>
   <body>
     <h1>Welcome to my page</h1>
+
+    <ul id="list">
+      <li>item 0</li>
+    </ul>
+    <button id="addElem">
+      Dodaj
+    </button>
+    <br><br>
+
+
+
+    <button class="button">Hello!</button>
+    <button class="button">Adieu</button>
+    <button class="button">Herbata!</button>
+    <button class="button">Kawa!</button>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
